# react-django-ethical-marketplace

./: .gitignore  README.md  pyproject.toml
backend/: settings.py  urls.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Cart.tsx  Home.tsx  ProductDetails.tsx  ProductList.tsx
frontend/src/context/: CartContext.tsx
frontend/src/services/: api.ts  cartService.ts  productService.ts
frontend/src/utils/: axiosInstance.ts
marketplace/: models.py  serializers.py  urls.py  views.py
marketplace/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_remove_cartitem_user_cartitem_cart.py
